--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
