--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "dayjs": "^1.11.9",
     "express-session": "^1.17.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.7.1",
@@ -16,7 +17,9 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-datepicker": "^4.16.0",
+    "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
