--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "express-session": "^1.17.3",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.7.1",
+    "luxon": "^3.4.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.4.5",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.16.0",
     "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
