--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.7.1",
     "luxon": "^3.4.2",
+    "mammoth": "^1.6.0",
     "moment": "^2.29.4",
     "mongoose": "^7.4.5",
     "passport": "^0.6.0",
@@ -30,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-table": "^7.8.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
