--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "docxtemplater": "^3.39.1",
     "express-session": "^1.17.3",
+    "file-saver": "^2.0.5",
+    "gojs": "^2.3.11",
+    "html2pdf.js": "^0.10.1",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.7.1",
     "luxon": "^3.4.2",
-    "mammoth": "^1.6.0",
     "moment": "^2.29.4",
     "mongoose": "^7.4.5",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "path-browserify": "^1.0.1",
+    "primereact": "^9.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-d3-tree": "^3.6.1",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.16.0",
     "react-datetime-picker": "^5.5.1",
