--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +16,7 @@
     "docxtemplater": "^3.39.1",
     "express-session": "^1.17.3",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "gojs": "^2.3.11",
     "html2pdf.js": "^0.10.1",
     "http-proxy-middleware": "^2.0.6",
@@ -25,12 +28,13 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "path-browserify": "^1.0.1",
+    "popper.js": "^1.16.1",
     "primereact": "^9.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-d3-tree": "^3.6.1",
     "react-date-range": "^1.4.0",
-    "react-datepicker": "^4.16.0",
+    "react-datepicker": "^4.18.0",
     "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
     "react-html-table-to-excel": "^2.0.0",
