--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
