--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-datepicker": "^4.18.0",
     "react-datetime-picker": "^5.5.1",
     "react-dom": "^18.2.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
