--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.9.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "d3": "^7.8.5",
@@ -31,8 +32,10 @@
     "path-browserify": "^1.0.1",
     "popper.js": "^1.16.1",
     "primereact": "^9.6.2",
+    "rc-steps": "^6.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-commentbox": "^3.0.1",
     "react-d3-tree": "^3.6.1",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.18.0",
